SERVER-37313 Secondary foreground index build should take Database X rather than Global X lock

(cherry picked from commit e7bed9bdcb376d5a06dce6228047309e8481f9cf)